Fix color on mobile, Temporate allow upload image from non-staff

--- a/resources/navbar.scss
+++ b/resources/navbar.scss
@@ -289,7 +289,7 @@ nav {
         border-left: 4px solid $color_link75;
         position: fixed;
         top: 36px;
-        background: $color_primary75;
+        background: $color_nav_list;
         bottom: 0;
         width: 8em;
         left: 0;
